--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "homepage": "https://thititongumpun.github.io/idkwhatimdoing",
+    "homepage": "https://github.com/thititongumpun/idkwhatimdoing",
     "name": "idkwhatimdoing",
     "version": "0.1.0",
     "private": true,
